--- a/index.html
+++ b/index.html
@@ -1,76 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Ethiopia 2026</title>
-    <style>
-        * { scroll-behavior: smooth; box-sizing: border-box; margin: 0; padding: 0; }
-        body { font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
-        nav { background: #fff; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
-        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
-        .btn-join { background: #2E7D32; color: white !important; padding: 10px 20px; border-radius: 5px; }
-        section { padding: 100px 5%; text-align: center; border-bottom: 1px solid #eee; min-height: 450px; }
-        .fayda-section { background: #003973; color: white; }
-        .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
-        .course-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-top: 40px; }
-        .course-card { background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); border-top: 5px solid #003973; text-align: left; color: #333; }
-    </style>
-</head>
-<body>
-
-<nav>
-    <a href="#home" class="logo">ልማት Hub</a>
-    <div class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#schedule">Schedule</a>
-        <a href="#courses">Courses</a>
-        <a href="#faq">FAQ</a>
-        <a href="#contact">Contact</a>
-        <a href="#signup" class="btn-join">Verify Fayda ID</a>
+<div class="course-grid">
+    <div class="course-card">
+        <span class="course-tag">SECURITY</span>
+        <h3>Cyber Defense</h3>
+        <p>Master national-grade encryption and threat detection for 2026 systems.</p>
     </div>
-</nav>
-
-<section id="home" style="background: #f8f9fa;">
-    <h1>ልማት Hub</h1>
-    <p>Ethiopia's 2026 Digital Mission. Powered by National ID.</p>
-</section>
-
-<section id="signup" class="fayda-section">
-    <div class="fayda-card">
-        <h2>Fayda One-Click Sync</h2>
-        <input type="text" placeholder="Enter Fayda ID" style="width:100%; padding:15px; margin:20px 0; border-radius:8px;">
-        <button style="width:100%; padding:15px; background:#FFD700; color:#003973; font-weight:bold; border:none; border-radius:8px;">VERIFY & JOIN</button>
+    <div class="course-card">
+        <span class="course-tag">DATA</span>
+        <h3>Big Data Analytics</h3>
+        <p>Analyze massive datasets using cloud-native infrastructure.</p>
     </div>
-</section>
-
-<section id="schedule">
-    <h2>12-Week Roadmap</h2>
-    <p>Python Foundations → AI Engineering → Global Careers.</p>
-</section>
-
-<section id="courses">
-    <h2>Specialized 2026 Tracks</h2>
-    <div class="course-grid">
-        <div class="course-card"><h3>Cyber Defense</h3><p>Security for 2026 systems.</p></div>
-        <div class="course-card"><h3>Big Data</h3><p>Cloud-native analytics.</p></div>
+    <div class="course-card">
+        <span class="course-tag">CLOUD</span>
+        <h3>Cloud Architecture</h3>
+        <p>Design scalable systems for the Ethiopian digital transformation.</p>
     </div>
-</section>
-
-<section id="faq">
-    <h2>FAQ</h2>
-    <p>The program is scholarship-based for all verified Fayda holders.</p>
-</section>
-
-<section id="contact">
-    <h2>Contact Us</h2>
-    <p>Addis Ababa, Ethiopia | contact@lemathub.et</p>
-</section>
-
-<footer style="padding: 40px; text-align: center; background: #111; color: white;">
-    <p>&copy; 2026 ልማት Hub | Official Fayda Partner</p>
-</footer>
-
-</body>
-</html>
+    <div class="course-card">
+        <span class="course-tag">DEV</span>
+        <h3>Software Engineering</h3>
+        <p>Build enterprise-grade applications using modern DevOps pipelines.</p>
+    </div>
+    <div class="course-card">
+        <span class="course-tag">WEB3</span>
+        <h3>Blockchain Dev</h3>
+        <p>Develop smart contracts for the emerging digital Birr ecosystem.</p>
+    </div>
+</div>
