--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
-<div class="course-grid">
-    <div class="course-card">
-        <span class="course-tag">SECURITY</span>
-        <h3>Cyber Defense</h3>
-        <p>Master national-grade encryption and threat detection for 2026 systems.</p>
-    </div>
-    <div class="course-card">
-        <span class="course-tag">DATA</span>
-        <h3>Big Data Analytics</h3>
-        <p>Analyze massive datasets using cloud-native infrastructure.</p>
-    </div>
-    <div class="course-card">
-        <span class="course-tag">CLOUD</span>
-        <h3>Cloud Architecture</h3>
-        <p>Design scalable systems for the Ethiopian digital transformation.</p>
-    </div>
-    <div class="course-card">
-        <span class="course-tag">DEV</span>
-        <h3>Software Engineering</h3>
-        <p>Build enterprise-grade applications using modern DevOps pipelines.</p>
-    </div>
-    <div class="course-card">
-        <span class="course-tag">WEB3</span>
-        <h3>Blockchain Dev</h3>
-        <p>Develop smart contracts for the emerging digital Birr ecosystem.</p>
-    </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ልማት Hub | Ethiopia 2026</title>
+    <style>
+        /* GLOBAL DESIGN */
+        * { scroll-behavior: smooth; box-sizing: border-box; margin: 0; padding: 0; }
+        body { font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
+        nav { background: #fff; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
+        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
+        .btn-join { background: #2E7D32; color: white !important; padding: 10px 20px; border-radius: 5px; }
+
+        section { padding: 100px 5%; text-align: center; border-bottom: 1px solid #eee; min-height: 450px; }
+        .hero { background: #f8f9fa; }
+        
+        /* COURSE CARDS */
+        .course-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-top: 40px; }
+        .course-card { background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); border-top: 5px solid #003973; text-align: left; }
+        .course-tag { background: #eef2f7; color: #003973; padding: 5px 10px; font-size: 0.8rem; font-weight: bold; border-radius: 4px; display: inline-block; margin-bottom: 10px; }
+
+        /* FAQ ITEMS */
+        .faq-item { background: #f9f9f9; padding: 25px; border-radius: 8px; margin-bottom: 15px; text-align: left; border-left: 5px solid #003973; max-width: 800px; margin: 0 auto 15px auto; }
+    </style>
+</head>
+<body>
+
+<nav>
+    <a href="#home" class="logo">ልማት Hub</a>
+    <div class="nav-links">
+        <a href="#home">Home</a>
+        <a href="#courses">Courses</a>
