--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ልማት Hub | Ethiopia 2026</title>
     <style>
-        /* GLOBAL DESIGN */
+        /* --- DESIGN STYLES --- */
         * { scroll-behavior: smooth; box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
         nav { background: #fff; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -16,13 +16,20 @@
         section { padding: 100px 5%; text-align: center; border-bottom: 1px solid #eee; min-height: 450px; }
         .hero { background: #f8f9fa; }
         
+        /* FAYDA BOX */
+        .fayda-section { background: #003973; color: white; }
+        .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; background: rgba(255,255,255,0.05); }
+
         /* COURSE CARDS */
         .course-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-top: 40px; }
-        .course-card { background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); border-top: 5px solid #003973; text-align: left; }
+        .course-card { background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); border-top: 5px solid #003973; text-align: left; transition: 0.3s; }
+        .course-card:hover { transform: translateY(-10px); }
         .course-tag { background: #eef2f7; color: #003973; padding: 5px 10px; font-size: 0.8rem; font-weight: bold; border-radius: 4px; display: inline-block; margin-bottom: 10px; }
 
         /* FAQ ITEMS */
         .faq-item { background: #f9f9f9; padding: 25px; border-radius: 8px; margin-bottom: 15px; text-align: left; border-left: 5px solid #003973; max-width: 800px; margin: 0 auto 15px auto; }
+        
+        footer { background: #111; color: white; padding: 50px; }
     </style>
 </head>
 <body>
@@ -43,56 +50,7 @@
     <p>Ethiopia's 2026 Digital Mission. Powered by National ID.</p>
 </section>
 
-<section id="courses">
-    <h2 style="color: #003973; font-size: 2.5rem;">Specialized 2026 Tracks</h2>
-    <div class="course-grid">
-        <div class="course-card">
-            <span class="course-tag">SECURITY</span>
-            <h3>Cyber Defense</h3>
-            <p>Master national-grade encryption and threat detection.</p>
-        </div>
-        <div class="course-card">
-            <span class="course-tag">DATA</span>
-            <h3>Big Data Analytics</h3>
-            <p>Analyze massive datasets using cloud-native infrastructure.</p>
-        </div>
-        <div class="course-card">
-            <span class="course-tag">CLOUD</span>
-            <h3>Cloud Architecture</h3>
-            <p>Design scalable systems for the Ethiopian digital transformation.</p>
-        </div>
-        <div class="course-card">
-            <span class="course-tag">WEB3</span>
-            <h3>Blockchain Dev</h3>
-            <p>Develop smart contracts for the emerging digital Birr ecosystem.</p>
-        </div>
-    </div>
-</section>
-
-<section id="faq">
-    <h2 style="color: #003973; margin-bottom: 30px;">Frequently Asked Questions</h2>
-    <div class="faq-item">
-        <h3>Is the Fayda ID mandatory?</h3>
-        <p>Yes, all tracks require verification via the National ID system.</p>
-    </div>
-    <div class="faq-item">
-        <h3>Will I receive a certificate?</h3>
-        <p>Yes, a verified digital credential linked to your National ID profile.</p>
-    </div>
-    <div class="faq-item">
-        <h3>Is the program remote?</h3>
-        <p>Yes, all training is conducted via our elite digital learning platform.</p>
-    </div>
-</section>
-
-<section id="contact">
-    <h2 style="color: #003973;">Contact Us</h2>
-    <p>Email: contact@lemathub.et | Addis Ababa, Ethiopia</p>
-</section>
-
-<footer style="padding: 40px; text-align: center; background: #111; color: white;">
-    <p>&copy; 2026 ልማት Hub | Official Fayda Partner</p>
-</footer>
-
-</body>
-</html>
+<section id="signup" class="fayda-section">
+    <div class="fayda-card">
+        <h2>Fayda One-Click Sync</h2>
+        <p style="margin-bottom: 20px;">Verification gateway for elite tracks.
