--- a/index.html
+++ b/index.html
@@ -3,19 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Ethiopia 2026</title>
+    <title>ልማት Hub | Ethiopia 2026 Elite</title>
     <style>
+        /* GLOBAL DESIGN */
         * { scroll-behavior: smooth; box-sizing: border-box; margin: 0; padding: 0; }
-        body { font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
+        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
+        
+        /* NAVIGATION & LANGUAGE */
         nav { background: #fff; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
         .nav-links { display: flex; align-items: center; }
-        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
-        .lang-switch { margin-left: 20px; color: #003973; font-weight: bold; border: 2px solid #003973; padding: 5px 12px; border-radius: 4px; cursor: pointer; }
-        .btn-join { background: #2E7D32; color: white !important; padding: 10px 20px; border-radius: 5px; margin-left: 20px; }
-        section { padding: 100px 5%; text-align: center; border-bottom: 1px solid #eee; }
+        .nav-links a { text-decoration: none; color: #333; margin-left: 15px; font-weight: 500; font-size: 0.9rem; }
+        .lang-btn { margin-left: 15px; color: #003973; font-weight: bold; border: 1px solid #003973; padding: 5px 10px; border-radius: 4px; cursor: pointer; font-size: 0.8rem; }
+        .btn-join { background: #2E7D32; color: white !important; padding: 8px 15px; border-radius: 5px; margin-left: 15px; }
+
+        section { padding: 80px 5%; text-align: center; border-bottom: 1px solid #eee; }
+        .hero { background: #f8f9fa; padding: 100px 5%; }
+        
+        /* FAYDA VERIFY BOX */
         .fayda-section { background: #003973; color: white; }
         .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; background: rgba(255,255,255,0.05); }
-        .fayda-input { width: 100%; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; color: #333; }
+        .fayda-input { width: 100%; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; }
         .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
-        .course-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-top
+
+        /* TABLE */
+        .table-container { max-width: 800px; margin: 30px auto; overflow-x: auto; background: white; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
+        table { width: 100%; border-collapse: collapse
