--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
         body { font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; line-height: 1.6; text-align: center; }
         
         /* NAVIGATION & LANGUAGE BAR */
-        nav { background: #fff; padding: 15px 5%; display: flex; justify-content: flex-end; align-items: center; position: sticky; top: 0; z-index: 1000; border-bottom: 1px solid #eee; }
-        .logo-left { margin-right: auto; font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
-        nav a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; font-size: 0.9rem; }
-        .lang-btn { margin-left: 20px; color: #003973; font-weight: bold; border: 1px solid #003973; padding: 5px 12px; border-radius: 4px; cursor: pointer; }
-        .btn-verify { background: #2E7D32; color: white !important; padding: 10px 20px; border-radius: 5px; margin-left: 20px; }
+        nav { background: #fff; padding: 20px 5%; display: flex; justify-content: space-around; align-items: center; position: sticky; top: 0; z-index: 1000; border-bottom: 2px solid #eee; }
+        nav a { text-decoration: none; color: #003973; font-weight: bold; font-size: 0.9rem; text-transform: uppercase; }
+        .lang-btn { color: #003973; font-weight: bold; border: 2px solid #003973; padding: 5px 12px; border-radius: 4px; cursor: pointer; }
+        .btn-verify { background: #2E7D32; color: white !important; padding: 10px 20px; border-radius: 5px; }
 
         section { padding: 80px 5%; border-bottom: 1px solid #eee; }
         
         /* HERO */
+        .hero { padding: 100px 5%; }
         .hero h1 { font-size: 3rem; color: #003973; margin-bottom: 10px; }
 
         /* FAYDA VERIFICATION SECTION */
         .fayda-section { background: #003973; color: white; padding: 100px 5%; }
-        .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; background: rgba(255,255,255,0.05); }
-        .fayda-input { width: 100%; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; }
-        .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
+        .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
+        .fayda-input { width: 80%; padding: 15px; margin: 20px 0; border-radius: 4px; border: none; font-size: 1.1rem; text-align: center; }
+        .fayda-btn { padding: 15px 40px; background: #FFD700; color: #003973; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
 
         /* ROADMAP TABLE */
         .roadmap-table { width: 90%; max-width: 900px; margin: 30px auto; border-collapse: collapse; background: white; }
         .roadmap-table th { background: #003973; color: white; padding: 15px; }
-        .roadmap-table td { border: 1px solid #ddd; padding: 12px; text-align: center; }
+        .roadmap-table td { border: 1px solid #ddd; padding: 12px; }
 
         /* COURSE CARDS */
         .course-grid { display: flex; flex-wrap: wrap; justify-content: center; gap: 25px; margin-top: 40px; }
@@ -42,26 +42,24 @@
 <body>
 
 <nav>
-    <a href="#home" class="logo-left">ልማት Hub</a>
     <a href="#home">Home</a>
     <a href="#schedule">Schedule</a>
     <a href="#courses">Courses</a>
     <a href="#faq">FAQ</a>
-    <a href="#contact">Contact</a>
     <span class="lang-btn">EN | አማርኛ</span> <a href="#signup" class="btn-verify">Verify ID</a>
 </nav>
 
-<section id="home">
+<section id="home" class="hero">
     <h1>ልማት Hub</h1>
-    <p>Ethiopia's 2026 Digital Mission. Powered by National ID.</p>
+    <p>Ethiopia's 2026 Digital Mission.</p>
 </section>
 
 <section id="signup" class="fayda-section">
     <div class="fayda-card">
         <h2>Fayda One-Click Sync</h2>
-        <p>Verification gateway for elite tracks.</p>
         <input type="text" placeholder="Enter Fayda ID" class="fayda-input">
-        <button class="fayda-btn">VERIFY & JOIN</button>
+        <br>
+        <button class="fayda-btn">VERIFY</button>
     </div>
 </section>
 
@@ -92,16 +90,11 @@
 <section id="faq">
     <h2>FAQ</h2>
     <p><strong>Is it free?</strong> Yes.</p>
-    <p><strong>Is ID required?</strong> Yes, Fayda ID.</p>
-</section>
-
-<section id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: <b>contact@lemathub.et</b> | Addis Ababa, Ethiopia</p>
+    <p><strong>Is ID required?</strong> Yes, Fayda ID mandatory.</p>
 </section>
 
 <footer>
-    <p>&copy; 2026 ልማት Hub | Official Fayda Partner</p>
+    <p>&copy; 2026 ልማት Hub | Ethiopia's Digital Future</p>
 </footer>
 
 </body>
