--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ልማት Hub | Ethiopia 2026</title>
     <style>
-        /* --- CORE STYLE PROTECTOR --- */
+        /* --- STABILITY LAYER --- */
         * { scroll-behavior: smooth; box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; line-height: 1.6; text-align: center; }
         
-        /* NAV */
+        /* NAV BAR */
         nav { background: #fff; padding: 15px 5%; display: flex; justify-content: flex-end; align-items: center; position: sticky; top: 0; z-index: 1000; border-bottom: 1px solid #eee; }
         .logo-text { margin-right: auto; font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
         nav a { text-decoration: none; color: #333; margin-left: 15px; font-weight: 500; font-size: 0.85rem; }
@@ -18,7 +18,10 @@
 
         section { padding: 80px 5%; border-bottom: 1px solid #eee; }
         
-        /* BLUE FAYDA AREA */
+        /* HERO AREA */
+        .hero h1 { font-size: 2.8rem; color: #003973; margin-bottom: 10px; }
+
+        /* FAYDA BOX */
         .fayda-area { background: #003973; color: white; padding: 100px 5%; }
         .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
         .fayda-input { width: 100%; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; }
@@ -45,11 +48,12 @@
     <a href="#courses">Courses</a>
     <a href="#faq">FAQ</a>
     <a href="#contact">Contact</a>
-    <span class="lang-btn">EN | አማርኛ</span> <a href="#signup" class="btn-verify">Verify ID</a>
+    <span class="lang-btn">EN | አማርኛ</span>
+    <a href="#signup" class="btn-verify">Verify ID</a>
 </nav>
 
 <section id="home">
-    <h1 style="font-size: 2.8rem; color: #003973;">ልማት Hub</h1>
+    <h1>ልማት Hub</h1>
     <p>Ethiopia's 2026 Digital Mission. Powered by National ID.</p>
 </section>
 
@@ -61,3 +65,45 @@
         <button class="fayda-btn">VERIFY & JOIN</button>
     </div>
 </section>
+
+<section id="schedule">
+    <h2>12-Week Roadmap</h2>
+    <table class="roadmap-table">
+        <thead>
+            <tr><th>Weeks</th><th>Goal</th></tr>
+        </thead>
+        <tbody>
+            <tr><td>1-4</td><td>Python Foundations</td></tr>
+            <tr><td>5-8</td><td>AI Engineering</td></tr>
+            <tr><td>9-12</td><td>Global Jobs</td></tr>
+        </tbody>
+    </table>
+</section>
+
+<section id="courses">
+    <h2>Our Specialized Tracks</h2>
+    <div class="grid">
+        <div class="card"><h3>Cyber</h3><p>Security</p></div>
+        <div class="card"><h3>Data</h3><p>Analytics</p></div>
+        <div class="card"><h3>Cloud</h3><p>Arch</p></div>
+        <div class="card"><h3>Web3</h3><p>Blockchain</p></div>
+    </div>
+</section>
+
+<section id="faq">
+    <h2>FAQ</h2>
+    <p><strong>Is it free?</strong> Yes, for all citizens.</p>
+    <p><strong>Is ID required?</strong> Yes, Fayda ID is mandatory.</p>
+</section>
+
+<section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <strong>contact@lemathub.et</strong></p>
+</section>
+
+<footer>
+    <p>&copy; 2026 ልማት Hub | Official Fayda Partner</p>
+</footer>
+
+</body>
+</html>
