--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
         .lang-btn { margin-left: 15px; color: #003973; font-weight: bold; border: 1px solid #003973; padding: 5px 12px; border-radius: 4px; cursor: pointer; background: white; }
         .btn-verify { background: #2E7D32; color: white !important; padding: 8px 18px; border-radius: 5px; margin-left: 15px; font-weight: bold; }
 
-        section { padding: 60px 5%; }
+        section { padding: 60px 5%; border-bottom: 1px solid #f9f9f9; }
         .fayda-area { background: #003973; color: white; padding: 80px 5%; }
         .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; transition: 0.3s; }
         .fayda-input { width: 100%; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; color: #333; }
         .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
 
-        /* TABLE & CARDS */
         .roadmap-table { width: 95%; max-width: 850px; margin: 20px auto; border-collapse: collapse; background: white; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
         .roadmap-table th { background: #003973; color: white; padding: 18px; }
         .roadmap-table td { border: 1px solid #ddd; padding: 15px; font-weight: 500; }
@@ -33,14 +32,18 @@
         .grid { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px; }
         .card { border: 1px solid #ddd; padding: 30px; width: 220px; border-top: 6px solid #003973; background: #fff; border-radius: 4px; }
 
-        /* MOBILE FIXES */
+        /* FAQ STYLE */
+        .faq-box { max-width: 700px; margin: 0 auto; text-align: left; }
+        .faq-item { margin-bottom: 20px; }
+        .faq-item strong { display: block; color: #003973; margin-bottom: 5px; }
+
         @media (max-width: 600px) {
             nav { flex-direction: column; padding: 10px; }
             nav a { margin: 5px 0; }
             .fayda-card { width: 95%; padding: 20px; }
         }
 
-        footer { background: #111; color: white; padding: 40px; margin-top: 40px; }
+        footer { background: #111; color: white; padding: 40px; }
     </style>
 </head>
 <body>
@@ -53,6 +56,7 @@
     <a href="#" class="logo">ልማት Hub</a>
     <a href="#schedule">Schedule</a>
     <a href="#courses">Courses</a>
+    <a href="#faq">FAQ</a>
     <button class="lang-btn" onclick="toggleLang()">EN | አማርኛ</button>
     <a href="#signup" class="btn-verify">Verify ID</a>
 </nav>
@@ -95,6 +99,29 @@
     </div>
 </section>
 
+<section id="faq">
+    <h2 style="margin-bottom: 30px;">FAQ</h2>
+    <div class="faq-box">
+        <div class="faq-item">
+            <strong>Is it free?</strong>
+            <p>Yes, all digital mission tracks are free for citizens.</p>
+        </div>
+        <div class="faq-item">
+            <strong>Is ID required?</strong>
+            <p>Yes, a valid Fayda ID is mandatory for verification.</p>
+        </div>
+        <div class="faq-item">
+            <strong>When do classes start?</strong>
+            <p>New cohorts begin the first Monday of every month.</p>
+        </div>
+    </div>
+</section>
+
+<section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <strong>contact@lemathub.et</strong></p>
+</section>
+
 <footer>
     <p>&copy; 2026 ልማት Hub | Official Fayda Partner</p>
 </footer>
@@ -116,7 +143,7 @@
         const box = document.getElementById('status-box');
         if(idVal.length < 5) { alert("Please enter a valid Fayda ID"); return; }
         
-        box.innerHTML = "<h2>Verifying...</h2><p>Connecting to Registry</p>";
+        box.innerHTML = "<h2>Verifying...</h2><p>Connecting to National ID Registry</p>";
         setTimeout(() => {
             box.style.borderColor = "#2E7D32";
             box.innerHTML = `<h2 style="color: #FFD700;">Verified!</h2><p>Welcome, Citizen ${idVal}.</p><button class="fayda-btn" style="background: #2E7D32; color: white;">ENTER CLASSROOM</button>`;
