--- a/index.html
+++ b/index.html
@@ -8,36 +8,31 @@
         * { scroll-behavior: smooth; box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: 'Segoe UI', Arial, sans-serif; background: #ffffff; color: #333; line-height: 1.6; text-align: center; }
         
-        /* 1. TOP TICKER */
         .ticker-wrap { background: #FFD700; color: #003973; padding: 12px 0; overflow: hidden; font-weight: bold; position: fixed; width: 100%; top: 0; z-index: 2000; }
         .ticker { display: inline-block; white-space: nowrap; animation: marquee 30s linear infinite; }
         @keyframes marquee { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }
 
-        /* 2. NAVIGATION */
         nav { background: #fff; padding: 15px 5%; display: flex; justify-content: flex-end; align-items: center; position: sticky; top: 40px; z-index: 1000; border-bottom: 2px solid #f0f0f0; }
         .logo { margin-right: auto; font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
         nav a { text-decoration: none; color: #333; margin-left: 15px; font-weight: 500; font-size: 0.9rem; }
         .join-btn { background: #FFD700 !important; color: #003973 !important; padding: 10px 22px; border-radius: 50px; font-weight: 800; text-transform: uppercase; border: 2px solid #003973; box-shadow: 0 4px 0 #003973; text-decoration: none; }
 
-        section { padding: 80px 5%; border-bottom: 1px solid #eee; min-height: 400px; }
+        section { padding: 80px 5%; border-bottom: 1px solid #eee; }
 
-        /* 3. NATIONAL ID AREA */
         .fayda-area { background: #003973; color: white; padding: 100px 5%; }
         .fayda-card { max-width: 650px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
         .fayda-input { width: 100%; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; color: #333; }
         .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
 
-        /* 4. ROADMAP & TRACKS */
-        .roadmap-table { width: 100%; max-width: 800px; margin: 30px auto; border-collapse: collapse; background: white; }
-        .roadmap-table th { background: #003973; color: white; padding: 15px; }
-        .roadmap-table td { border: 1px solid #ddd; padding: 15px; font-weight: bold; }
-        .grid { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px; }
-        .card { border: 1px solid #ddd; padding: 30px; width: 220px; border-top: 6px solid #003973; background: #fff; border-radius: 8px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; max-width: 1100px; margin: 40px auto; }
+        .card { border: 1px solid #ddd; padding: 25px; border-top: 6px solid #003973; background: #fff; border-radius: 8px; transition: 0.3s; }
+        .card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
+        .card h3 { color: #003973; margin-bottom: 10px; }
 
-        /* 5. FAQ & FOOTER */
         .faq-box { max-width: 700px; margin: 0 auto; text-align: left; }
-        .faq-item { margin-bottom: 25px; }
-        .faq-item strong { color: #003973; font-size: 1.1rem; display: block; }
+        .faq-item { margin-bottom: 25px; border-bottom: 1px solid #f0f0f0; padding-bottom: 15px; }
+        .faq-item strong { color: #003973; font-size: 1.1rem; display: block; margin-bottom: 5px; }
+
         footer { background: #111; color: white; padding: 60px 5%; border-top: 5px solid #FFD700; }
     </style>
 </head>
@@ -50,8 +45,7 @@
 <nav>
     <a href="#" class="logo">ልማት Hub</a>
     <a href="#about">About</a>
-    <a href="#schedule">Schedule</a>
-    <a href="#courses">Tracks</a>
+    <a href="#courses">10 Tracks</a>
     <a href="#faq">FAQ</a>
     <a href="#signup" class="join-btn">Join Now</a>
 </nav>
@@ -61,30 +55,6 @@
     <p style="font-size: 1.3rem;">Ethiopia's 2026 Digital Mission. Powered by National ID.</p>
 </section>
 
-<section id="about" style="background: #f9f9f9;">
-    <h2 style="color: #003973; margin-bottom: 20px;">Our Mission</h2>
-    <p>ልማት Hub is the official training engine for the Digital Ethiopia 2026 Strategy, providing world-class tech skills to verified citizens.</p>
-</section>
-
 <section id="signup" class="fayda-area">
     <div class="fayda-card" id="status-box">
-        <h2 style="color: #FFD700; font-size: 2rem;">National ID Verification</h2>
-        <p>Verify your Fayda ID to unlock the full 2026 curriculum.</p>
-        <input type="number" placeholder="Enter Fayda ID" id="id-input" class="fayda-input">
-        <button class="fayda-btn" onclick="startVerify()">VERIFY & JOIN</button>
-    </div>
-</section>
-
-<section id="schedule">
-    <h2>12-Week Roadmap</h2>
-    <table class="roadmap-table">
-        <thead><tr><th>Phase</th><th>Goal</th></tr></thead>
-        <tbody>
-            <tr><td>Weeks 1-4</td><td>Coding Foundations</td></tr>
-            <tr><td>Weeks 5-8</td><td>Advanced AI & Systems</td></tr>
-            <tr><td>Weeks 9-12</td><td>Global Employment</td></tr>
-        </tbody>
-    </table>
-</section>
-
-<section id="courses" style="background: #f9f9
+        <h2 style="
